--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
                 <label for="expenditure">Expenditure Amount:</label>
                 <input type="number" id="expenditure">
 
+                <div id="customFieldsContainer"></div>
+
                 <button type="submit">Add Record</button>
             </form>
         </section>
